yaml_deployments/tripapi.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: tripapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tripapi
status:
  loadBalancer: {}
