yaml_deployments/tripinsights.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trippoi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trippoi
  template:
    metadata:
      labels:
        app: trippoi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: trippoi
        image: registryjxv4980.azurecr.io/tripinsights/poi:1.0
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: poi
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-system-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poiapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: poiapi
status:
  loadBalancer: {}
