yaml_deployments/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userapi
        image: registryjxv4980.azurecr.io/tripinsights/userapi:1.0
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/secrets"
            readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: user
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-system-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: userapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: userapi
status:
  loadBalancer: {}
